# vallheru-rs-port

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  docker-compose.yml  index.html  tailwind.config.js  todos.md
.cargo/: config
assets/styles/: tailwind.css
backend/: Cargo.toml  build.rs  tailwind.config.js
backend/examples/: quick_dev.rs
backend/migrations/: 0_init.sql
backend/src/: main.rs  player_state.rs
backend/src/controller/: login.rs  mod.rs
backend/src/repository/: mod.rs  player.rs  token.rs
backend/src/templates/: game_macros.html  game_template.html  home_template.html  player_statistics.html
backend/src/web/: error.rs  mod.rs  router.rs
backend/src/web/handler/: home.rs  mod.rs  new_home.rs  player.rs  player_statistics.rs  prelude.rs
backend/src/web/handlers/: mod.rs
backend/src/web/middleware/: mod.rs
backend/src/web/templates/: home_login.html  home_login_welcome.html  home_macros.html  home_register.html  template.html
examples/: quick_dev.rs
frontend/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
frontend/src/: app.rs  main.rs
frontend/src/app/: api.rs  components.rs  context.rs  player_state.rs
frontend/src/app/components/: game.rs  home.rs
frontend/src/app/components/game_components/: bank.rs  chat.rs  city.rs  equipment.rs  fighting_arena.rs  forum.rs  hospital.rs  library.rs  minerals.rs  mod.rs  news.rs  notes.rs  player_statistics.rs  post_office.rs
frontend/style/: tailwind.css
migrations/: 0_init.sql
src/: config.rs  date.rs  lib.rs  main.rs  player_state.rs
src/controller/: login.rs
src/model/: mod.rs  player.rs  token.rs
src/repository/: player.rs  token.rs
src/templates/: game_error.html  game_template.html  home_index.html  home_login_welcome.html  home_register.html  home_template.html  news.html  player_statistics.html
src/templates/player_statistics/: disable_protection.html  main.html  select_bloodline.html  select_class.html  select_gender.html  select_religion.html  use_ap.html
src/util/: mod.rs  number.rs
src/web/: error.rs  mod.rs  router.rs
src/web/api/: mod.rs
src/web/form/: home.rs  mod.rs
src/web/handler/: home.rs  mod.rs  player_statistics.rs  prelude.rs
src/web/middleware/: mod.rs
vallheru/: Cargo.toml
vallheru-wasm/: Cargo.toml
vallheru-wasm/.cargo/: config
vallheru-wasm/src/: lib.rs
vallheru-wasm/src/util/: name_generator.rs
vallheru/src/: date.rs  lib.rs  name_generator.rs  password_utils.rs  utils.rs
vallheru/src/api/: error.rs  login.rs  mod.rs  player.rs  token.rs
vallheru/src/model/: mod.rs  player.rs
xtask/src/: main.rs
