[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
vallheru = { path = "../vallheru" }

clap = { version = "4", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "time",
] }
log = "0.4"
anyhow = "1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = "1"
serde_json = "1"

tower-http = { version = "0.6", features = ["fs", "cors"] }
tower-cookies = "0.11"
uuid = { version = "1", features = ["v4", "fast-rng"] }
thiserror = "2"


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
