[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
vallheru = { path = "../vallheru" }

clap = { version = "4", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "time",
] }
log = "0.4"
anyhow = "1"
http = "1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = "1"
serde_json = "1"

tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
thiserror = "2"
minijinja = { version = "2", features = ["builtins"] }
minijinja-embed = "2.3.1"


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"


[build-dependencies]
minijinja-embed = "2.3.1"
