[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
vallheru = { path = "../vallheru" }
leptos = { version = "0.7", features = ["csr"] }
console_error_panic_hook = "0.1"
leptos_router = { version = "0.7" }
leptos_meta = { version = "0.7.2" }
reactive_stores = "0.1.3"
web-sys = { version = "0.3.76", features = ["Storage"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
