[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
vallheru = { path = "../vallheru" }
leptos = { version = "0.7", features = ["csr"] }
console_error_panic_hook = "0.1"
leptos_router = { version = "0.7" }
leptos_meta = { version = "0.7" }
reactive_stores = "0.1"
web-sys = { version = "0.3", features = ["Storage"] }
reqwest = { version = "0.12", features = ["json"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
