[package]
name = "vallheru"
version = "0.1.0"
edition = "2021"

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"

serde = "1"
serde_json = "1"

sqlx = { version = "0.8", features = ["chrono"] }
bcrypt = "0.16.0"
chrono = { version = "0.4", features = ["serde"] }

uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }
