[package]
name = "vallheru"
version = "0.1.0"
edition = "2021"

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
http = "1"
serde = "1"
serde_json = "1"

sqlx = { version = "0.8", features = ["chrono", "bigdecimal"] }
bigdecimal = { version = "0.4", features = ["serde-json"] }
bcrypt = "0.16.0"
chrono = { version = "0.4", features = ["serde"] }

uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }

reqwest = { version = "0.12", features = ["json"] }
url = "2"

thiserror = "2"
anyhow = "1"
